proyectosoft-infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyectosoft
---
apiVersion: v1
kind: Service
metadata:
  name: user-api
  namespace: proyectosoft
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: user-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: user-api
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/user-api:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: payments-app
  namespace: proyectosoft
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: payments-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-app
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments-app
  template:
    metadata:
      labels:
        app: payments-app
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: payments-app
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/payments-app:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mf-payments-service
  namespace: proyectosoft
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: mf-payments
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf-payments
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mf-payments
  template:
    metadata:
      labels:
        app: mf-payments
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: mf-payments
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/mf-payments:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: metadata-api
  namespace: proyectosoft
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: metadata-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-api
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metadata-api
  template:
    metadata:
      labels:
        app: metadata-api
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: metadata-api
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/metadata-api:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: files-api
  namespace: proyectosoft
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: files-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-api
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: files-api
  template:
    metadata:
      labels:
        app: files-api
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: files-api
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/files-api:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-producer
  namespace: proyectosoft
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: notification-producer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-producer
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-producer
  template:
    metadata:
      labels:
        app: notification-producer
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: notification-producer
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/notification-producer:v2
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
  namespace: proyectosoft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-worker
  template:
    metadata:
      labels:
        app: notification-worker
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: notification-worker
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/notification-worker:v2 # Usa la v2 que tiene el email.php corregido
        command: ["php", "email.php"] # 👈 Obligamos a ejecutar el Worker de fondo
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: proyectosoft
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: api-gateway
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/api-gateway:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: proyectosoft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: oci-regcred
      containers:
      - name: frontend
        image: bog.ocir.io/axun7j4h4xhn/proyectosoft/frontend:latest # <--- Forzamos la v3 de producción
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: proyectosoft
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: proyectosoft
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: proyectosoft-scores-stripper@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      # 1. Archivos físicos / Scores (Específica)
      - path: /scores
        pathType: Prefix
        backend:
          service:
            name: files-api
            port:
              number: 8000

      # 2. Backend / API Gateway (Específica)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8000

      # 3. 🎯 MICROFRONTEND DE DONACIONES (¡Debe ir aquí arriba!)
      - path: /donations
        pathType: Prefix
        backend:
          service:
            name: mf-payments-service
            port:
              number: 3000

      # 4. Frontend principal (Atrapa todo lo demás, SIEMPRE AL FINAL)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
---
# 👇 AGREGA ESTE BLOQUE NUEVO COMPLETAMENTE ABAJO O ARRIBA DEL INGRESS
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-stripper
  namespace: proyectosoft
spec:
  stripPrefix:
    prefixes:
    - /api
---
# 👇 AGREGA ESTE OTRO BLOQUE AQUÍ
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: scores-stripper
  namespace: proyectosoft
spec:
  stripPrefix:
    prefixes:
    - /scores
---
# === DESPLIEGUE DE REDIS EN EL CLUSTER ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caching-redis
  namespace: proyectosoft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caching-redis
  template:
    metadata:
      labels:
        app: caching-redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: proyectosoft
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: caching-redis
